--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,14 @@ services:
         volumes: 
             - /app/node_modules
             - .:/app
+    tests:
+        stdin_open: true
+        environment:
+            - CHOKIDAR_USEPOLLING=true
+        build:
+            context: .
+            dockerfile: Dockerfile.dev
+        volumes: 
+            - /app/node_modules
+            - .:/app
+        command: ["npm", "run", "test"]
